# cascade

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EVALUATION.md  Makefile  README.md  SECURITY.md  TYPING.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  eval-gate.yml  release.yml  security.yml
cascade/: __init__.py  _version.py  cli.py  config.py
cascade/agents/: README.md  __init__.py  aligner.py  checkin_coach.py  contracts.py  critic.py  drafter.py  llm.py  reflector.py  reflector_persistence.py  risk_sentinel.py
cascade/agents/prompts/: __init__.py  aligner.j2  checkin_coach.j2  critic.j2  drafter.j2  reflector.j2  risk_sentinel.j2
cascade/api/: README.md  __init__.py  auth.py  dependencies.py  jwt_verifier.py  main.py  schemas.py
cascade/api/routes/: __init__.py  checkins.py  okrs.py  (+2 more)
cascade/domain/: __init__.py  checkin.py  decision.py  enums.py  identity.py  okr.py  organizational_learning.py  scoring.py
cascade/evals/: README.md  __init__.py  check_thresholds.py  datasets.py  drafting.py  gate.py  red_team.py  retrieval.py  types.py
cascade/mcp/: README.md  __init__.py  adapters.py  schemas.py  server.py  tools.py
cascade/memory/: README.md  __init__.py  bm25.py  context_builder.py  fakes.py  recorder.py  reranker.py  retrieval.py  store.py  types.py
cascade/observability/: README.md  __init__.py  handlers.py  mlflow_runner.py
cascade/orchestrator/: __init__.py  graph.py  resumption.py  state.py  supervisor.py
cascade/scripts/: README.md  __init__.py  demo_data.py  seed_demo.py
cascade/storage/: __init__.py  models.py  session.py
cascade/ui/: README.md  __init__.py  api_client.py  app.py
docs/adr/: 0000-template.md  0001-langgraph-orchestration.md  0002-causal-memory-graph.md  0003-dynamic-context-construction.md
docs/architecture/: agents.md  evals.md  memory.md  observability.md  overview.md
docs/runbooks/: eval-gate.md  jwt-auth.md  mcp-server.md  observability.md  operator-console.md  rest-api.md
eval_data/: README.md  golden_okrs.jsonl  memory_questions.jsonl  red_team_attacks.jsonl  thresholds.yaml
helm/cascade/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values.yaml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_organizational_learnings.py
scripts/: validate_helm_chart.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_live_drafter_critic.py
tests/integration/: __init__.py  conftest.py  factories.py  test_agent_graph.py  test_api_mutations.py  test_api_routes.py  test_decision_repository.py  test_mcp_hitl_tools.py  test_mcp_tools.py  test_memory_recorder.py  test_objective_repository.py  test_observability_eval_gate.py  test_organizational_learning.py  test_reflector_persistence.py  test_resumption.py  test_seed_demo.py  test_team_repository.py
tests/unit/: __init__.py  _jwt_helpers.py  test_agent_contracts.py  test_agents.py  test_aligner.py  test_api_auth.py  test_api_health.py  test_auth_jwt_mode.py  test_checkin_coach.py  test_config.py  test_context_builder.py  test_demo_data.py  test_drafter_with_memory.py  test_evals.py  test_evals_datasets.py  test_evals_runner.py  test_helm_chart.py  test_identity_and_decisions.py  test_jwt_verifier.py  test_mcp_adapters.py  test_mcp_server.py  test_memory_primitives.py  test_observability_handlers.py  test_observability_mlflow.py  test_okr_models.py  test_orm_models.py  test_prompts.py  test_reflector.py  test_resumption.py  test_risk_sentinel.py  test_scoring.py  test_supervisor.py  test_ui_api_client.py  test_ui_app.py  test_ui_components.py  test_version.py
(+18 files in other folders)
