[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cascade"
version = "0.17.0"
description = "OKR governance platform with multi-agent AI coaching and organizational memory"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Akash Chaudhari", email = "ag.chaudhari.1512@gmail.com" }]
keywords = ["okr", "agents", "langgraph", "mcp", "rag", "evals"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
  # Core orchestration
  "langgraph>=0.2.55",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-groq>=0.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",

  # API
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-jose[cryptography]>=3.3.0",
  "cachetools>=5.5.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.12",

  # MCP
  "mcp>=1.0.0",

  # Storage
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.3",
  "psycopg[binary]>=3.2.3",
  "chromadb>=0.5.20",

  # Retrieval
  "sentence-transformers>=3.3.0",
  "rank-bm25>=0.2.2",

  # Observability
  "langsmith>=0.1.140",
  "langfuse>=2.50.0",
  "mlflow>=2.17.0",
  "structlog>=24.4.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "prometheus-client>=0.21.0",

  # UI
  "streamlit>=1.39.0",

  # Utilities
  "httpx>=0.27.2",
  "tenacity>=9.0.0",
  "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.12",
  "mypy>=2.0.0",
  "pre-commit>=4.0.1",
  "types-passlib",
]
evals = [
  "ragas>=0.2.6",
  "deepeval>=1.5.0",
  "datasets>=3.0.0",
]
ui = [
  "streamlit>=1.40.0",
  "pandas>=2.2.0",
  "httpx>=0.27.0",
]
observability = [
  "langfuse>=3.0.0",
  "mlflow>=2.16.0",
]

[project.urls]
Homepage = "https://github.com/Akash-1512/cascade"
Documentation = "https://github.com/Akash-1512/cascade/tree/main/docs"
Repository = "https://github.com/Akash-1512/cascade"
Issues = "https://github.com/Akash-1512/cascade/issues"
Changelog = "https://github.com/Akash-1512/cascade/blob/main/CHANGELOG.md"

[project.scripts]
cascade = "cascade.cli:main"
cascade-mcp = "cascade.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["cascade"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=cascade",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: fast isolated tests with no external dependencies",
  "integration: tests requiring postgres, chromadb, or external services",
  "e2e: end-to-end tests exercising the full agent graph",
  "slow: tests that take more than a second",
]

[tool.coverage.run]
branch = true
source = ["cascade"]
omit = [
  "cascade/ui/*",
  "cascade/cli.py",
  "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "ragas.*", "deepeval.*", "rank_bm25.*"]
ignore_missing_imports = true
